src/stylesheets/components/_resizable.scss
//
// Resizable
// --------------------------------------------------

$zindex-resizable: 1000 !default;
$resizable-threshold: 8px !default;

.resizable {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  position: relative;
  contain: size layout style;

  .resizable-handle {
    &-col,
    &-row {
      position: absolute;
      z-index: $zindex-resizable;
    }

    &-col {
      top: 0;
      bottom: 0;
      width: $resizable-threshold;
      cursor: ew-resize;
    }

    &-left {
      left: -($resizable-threshold / 2);
    }

    &-right {
      right: -($resizable-threshold / 2);
    }

    &-row {
      left: 0;
      right: 0;
      height: $resizable-threshold;
      cursor: ns-resize;
    }

    &-top {
      top: -($resizable-threshold / 2);
    }

    &-bottom {
      bottom: -($resizable-threshold / 2);
    }
  }

  &.disabled {
    .resizable-handle-row,
    .resizable-handle-col {
      cursor: default;
    }
  }
}

